unpackaged/main/default/objects/FluxOrder__c/FluxOrder__c.object-meta.xml
<CustomObject>
    <description>W-001929 objet créé pour avoir des visibilité sur les flux de commande</description>
    <label>Flux Order</label>
    <nameField>
        <displayFormat>FO-{000000}</displayFormat>
        <label>Flux Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flux Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>