unpackaged/main/default/objects/FluxOrder__c/fields/Acknowledgement_amend__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_amend__c</fullName>
    <label>Acknowledgement amend</label>
    <length>245</length>
    <type>Text</type>
</CustomField>