unpackaged/main/default/objects/FluxOrder__c/fields/Acknowlegement__c.field-meta.xml
<CustomField>
    <fullName>Acknowlegement__c</fullName>
    <label>Acknowledgement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>