unpackaged/main/default/objects/FluxOrder__c/fields/Attempts_Max__c.field-meta.xml
<CustomField>
    <fullName>Attempts_Max__c</fullName>
    <label>Attempts Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>