unpackaged/main/default/objects/FluxOrder__c/fields/Initial_Sychro__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sychro__c</fullName>
    <label>Initial Sychro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
                <label>SUCCESS</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>ERROR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>