unpackaged/main/default/objects/FluxOrder__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>pour stocker le numéro de la commande associées aux flux</description>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Flux Orders</relationshipLabel>
    <relationshipName>Flux_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>