unpackaged/main/default/objects/FluxOrder__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>valeurs = XRP ou ZUORA dans un premier temps</description>
    <label>Target</label>
    <length>50</length>
    <type>Text</type>
</CustomField>