unpackaged/main/default/objects/FluxOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order_Number__c</columns>
    <columns>Acknowlegement__c</columns>
    <columns>Acknowledgement_amend__c</columns>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Attempts__c</columns>
    <columns>Initial_Sychro__c</columns>
    <columns>Current_Statut__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>