unpackaged/main/default/objects/FluxOrder__c/listViews/Copy_of_XRP_Current_Statut_ERROR.listView-meta.xml
<ListView>
    <fullName>Copy_of_XRP_Current_Statut_ERROR</fullName>
    <columns>Order_Number__c</columns>
    <columns>Acknowlegement__c</columns>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Attempts__c</columns>
    <columns>Initial_Sychro__c</columns>
    <columns>Current_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Statut__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/4/2023 12:00 AM</value>
    </filters>
    <label>Current Statut ERROR</label>
</ListView>