unpackaged/main/default/objects/FluxOrder__c/listViews/Flux_XRP_seul.listView-meta.xml
<ListView>
    <fullName>Flux_XRP_seul</fullName>
    <columns>Order_Number__c</columns>
    <columns>Acknowlegement__c</columns>
    <columns>NAME</columns>
    <columns>Target__c</columns>
    <columns>Attempts__c</columns>
    <columns>Initial_Sychro__c</columns>
    <columns>Current_Statut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target__c</field>
        <operation>equals</operation>
        <value>XRP</value>
    </filters>
    <label>Flux XRP seul</label>
</ListView>